--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "webpack": "4.44.2",
     "webpack-dev-server": "3.11.1",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "5.1.4"
+    "workbox-webpack-plugin": "5.1.4",
+    "react-router-dom": "^4.2.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
